[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event-bus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
libc = "0.2"

[build-dependencies]
prost-build = "0.13"
